# bee-api

./: .dockerignore  .env.example  .env.test.example  .eslintignore  .eslintrc.cjs  .gitignore  .release-it.json  CHANGELOG.md  Dockerfile  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: CODEOWNERS
.github/workflows/: ghcr-publish-release-image.yml  main.yml  publish-release-image.yml
.husky/: pre-commit
docs/: add-native-tools.md
migrations/: Migration20241106150011.ts  Migration20241121182852.ts  Migration20241126122701.ts  Migration20241206091921.ts  Migration20241209125658.ts
scripts/: copyright.sh
seeders/: DatabaseSeeder.ts  ToolsSeeder.ts
src/: ajv.ts  config.ts  context.ts  database.ts  logger.ts  metrics.ts  mikro-orm.config.ts  multipart.ts  opentelemetry.ts  rate-limit.ts  redis.ts  schema.ts  server.ts  swagger.ts  terminus.ts
src/administration/: api-keys.module.ts  api-keys.service.ts  helpers.ts  organization-users.module.ts  organization-users.service.ts  project-users.module.ts  project-users.service.ts  projects.module.ts  projects.service.ts
src/artifacts/: artifacts.module.ts  artifacts.service.ts
src/assistants/: assistant.entity.ts  assistants.module.ts  assistants.service.ts
tests/: setup.ts
workers/python/: Dockerfile  Dockerfile.docling  Dockerfile.unstructured  pyproject.toml
workers/python/python/: config.py  database.py  enums.py  init_resources.py  logger.py  main.py  telemetry.py  workers.py
workers/python/python/extraction/: __init__.py  docling.py  extraction.py  unstructured.py
(+423 files in other folders)
